--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,10 @@ packages = ephemerun
 [options.entry_points]
 console_scripts =
     ephemerun = ephemerun.main:main
+
+[mypy]
+check_untyped_defs = True
+disallow_incomplete_defs = True
+disallow_untyped_defs = True
+disallow_untyped_decorators = True
+disallow_untyped_calls = True
