--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ author = P. S. Clarke
 author_email = ephemerun@pscl4rke.net
 
 [options]
+python_requires = >=3.8
 packages = ephemerun
 
 [options.entry_points]
