--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 
 [metadata]
 name = ephemerun
+version = attr:ephemerun.__version__
 url = https://github.com/pscl4rke/ephemerun
 project_urls =
     Source Code = https://github.com/pscl4rke/ephemerun
