--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,27 @@ url = https://github.com/pscl4rke/ephemerun
 project_urls =
     Source Code = https://github.com/pscl4rke/ephemerun
     Issues = https://github.com/pscl4rke/ephemerun/issues
+description = Run actions in disposable containers
+long_description = file:README.md
+long_description_content_type = text/markdown
+licence = LGPLv3
+licence_files = LICENCE.txt
+license = cf:licence
+license_files = cf:licence_files
 author = P. S. Clarke
 author_email = ephemerun@pscl4rke.net
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    Intended Audience :: Information Technology
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+    Topic :: Software Development :: Build Tools
+    Topic :: Software Development :: Testing
+    Topic :: Utilities
 
 [options]
 python_requires = >=3.8
