Use venv.testing

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,10 @@ packages = ephemerun
 console_scripts =
     ephemerun = ephemerun.main:main
 
+[options.extras_require]
+testing =
+    pyroma
+
 [mypy]
 check_untyped_defs = True
 disallow_incomplete_defs = True
