Claim to support Python 3.13

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ url = https://github.com/pscl4rke/ephemerun
 project_urls =
     Source Code = https://github.com/pscl4rke/ephemerun
     Issues = https://github.com/pscl4rke/ephemerun/issues
+    Licence = https://github.com/pscl4rke/ephemerun/blob/master/LICENCE.txt
 description = Run actions in disposable containers
 long_description = file:README.md
 long_description_content_type = text/markdown
@@ -25,6 +26,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     Topic :: Software Development :: Build Tools
     Topic :: Software Development :: Testing
     Topic :: Utilities
